@@ -49,6 +49,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4486: When an exception has an explicit cause, do not print its
+  implicit context too.  This affects the `traceback` module as well as
+  built-in exception printing.
+
 - Issue #1488943: difflib.Differ() doesn't always add hints for tab characters
 
 - Issue #7354: distutils.tests.test_msvc9compiler - dragfullwindows can 
